0.39
Added the pgsimp tasks which are the old 0.36 version pgsql tasks supporting the old style separate tags tables.

0.38
Updated internal storage to use long instead of int identifiers to remove 2^31 node id limit.
Updated apidb support to the latest schema 20100910084426.
Fixed the --write-pbf short option --wb to point to the writer implementation instead of the reader.
Added additional quoting to commands in the osmosis.bat launcher to fix issues with spaces in the installation path.
Modified plugin loader code to support multiple osmosis-plugins.conf files to allow each plugin to provide its own.

0.37
Updated the pgsql schema (now version 6) to move all tags into hstore columns, add a ways.nodes column and CLUSTER the nodes and ways tables.  Significant performance increases.
Fixed a bug in --bounding-box and --bounding-polygon preventing use of clipIncompleteEntities after a --tee task.
Added --read-pbf and --write-pbf tasks supporting the new Google Protocol Buffer based binary data format.
Added a new --flatten task for removing multiple versions of single entities from an entity stream.
Fixed bugs in the --bounding-box and --bounding-polygon idTrackerType=Dynamic option.
Enhanced the apidb replication read queries by adding temp table primary keys to fix performance regressions with PostgreSQL 8.4.

0.36
Removed 0.5 support.
Added the --fast-write-pgsql task which uses PostgreSQL COPY commands to insert data.
Added the CompactTempFile node location store type which allows efficient pgsql geometry building for small data sets.
All write-pgsql tasks now default to the CompactTempFile node location type store instead of in memory.
Fixed regression in tar builds to make the launch scripts executable again.
Updated the pgsql schema (now version 5) to add a primary key to the relation_members table to allow more efficient updates.
Updated apidb support to the latest schema 20100513171259.