@@ -1,5 +1,6 @@
 0.39
 Added the pgsimp tasks which are the old 0.36 version pgsql tasks supporting the old style separate tags tables.
+Added a new "cascadingRelations" flag to --bb and --bp which is less costly than "completeRelations" and makes sure that parent relations are emitted when a child relation of theirs is emitted even if that child happens to come after the parent in the stream. The list of relations on output may appear in a different order than on input.
 
 0.38
 Updated internal storage to use long instead of int identifiers to remove 2^31 node id limit.
